# contest_manager

./: CLAUDE.md  IMPLEMENTATION_LOG.md  LICENSE  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/application/contest/: commands.py  handlers.py  queries.py
backend/src/application/game_title/: commands.py  handlers.py  queries.py
backend/src/application/match/: commands.py  handlers.py  queries.py
backend/src/application/standings/: handlers.py  queries.py
backend/src/domain/contest/: contest.py  player.py  repository.py  value_objects.py
backend/src/domain/game_title/: game_title.py  repository.py
backend/src/domain/match/: bracket_generator.py  match.py  repository.py  value_objects.py
backend/src/infrastructure/: database.py  settings.py
backend/src/infrastructure/mysql/: contest_repository.py  game_title_repository.py  match_repository.py  models.py
backend/src/presentation/: dependencies.py  main.py
backend/src/presentation/api/routers/: contests.py  game_titles.py  matches.py  standings.py
backend/tests/application/: test_contest_handlers.py  test_game_title_handlers.py  test_match_handlers.py  test_standings_handlers.py
backend/tests/domain/: test_bracket_generator.py  test_contest.py  test_contest_value_objects.py  test_game_title.py  test_match.py  test_player.py
backend/tests/presentation/: conftest.py  test_contests_router.py  test_game_titles_router.py  test_matches_router.py  test_standings_router.py
frontend/: index.html  (+3 more)
(+28 files in other folders)
